<resources>
    <string name="app_name">PC Application</string>
    <string name="purchase_pc">Purchase PC</string>
    <string name="clear_all">Clear All</string>
    <string name="price">Price</string>
    <string name="cpu">CPU</string>
    <string name="ram">RAM (GB)</string>
    <string name="ssd">SSD (GB)</string>
    <string name="mother_board">Motherboard</string>
    <string name="graphics_card">Graphics Card</string>
    <string name="pc_store_app_title">PC Store App (Yinghua Zhou)</string>
    <string name="add_pc">Add a new PC</string>
    <string name="remove_last_pc">Remove Last PC</string>
    <string name="remove_all_pcs">Remove All PCs</string>
    <string name="list_all_pcs">List All PCs</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pc_list_id">PC ID:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_acc_sign_up_here">Don\'t have an account? </string>
    <string name="already_have_an_acc">Already have an account? </string>
    <string name="USERNAME_DATA_SP">USERNAME_DATA_SP</string>
    <string name="USERS_ACC_DATA_SP">USERS_ACC_DATA_SP</string>
    <string name="LOGGED_USERNAME_TAG">LOGGED_USERNAME_TRANSPORT_TAG</string>
    <string name="NO_SUCH_USER_LOGIN_ERROR">NO_SUCH_USER_LOGIN_ERROR</string>
    <string name="PASSWORD_MISMATCH_LOGIN_ERROR">Incorrect password</string>
    <string name="USERNAME_RETRIEVE_ERROR">*USERNAME_ERROR*</string>
    <string name="NO_SUCH_USER_ERROR_DISPLAY_MSG">Looks like you haven\'t registered, would you like to sign up first?</string>
    <string name="log_out_options_menu">Log out</string>
</resources>