<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pc_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    card_view:cardBackgroundColor="@android:color/holo_orange_light"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/cpu_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cpu"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline12" />

        <TextView
            android:id="@+id/ram_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cpu_id"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ram"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline14" />

        <TextView
            android:id="@+id/ssd_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ram_id"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ssd"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline15" />

        <TextView
            android:id="@+id/mother_board_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ssd_id"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mother_board"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline16" />

        <TextView
            android:id="@+id/graphics_card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mother_board_id"
            android:fontFamily="sans-serif-medium"
            android:text="@string/graphics_card"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline19" />

        <TextView
            android:id="@+id/price_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/graphics_card_id"
            android:fontFamily="sans-serif-medium"
            android:text="@string/price"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline20" />

        <TextView
            android:id="@+id/pc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/pc_list_id"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="@+id/guideline13"
            card_view:layout_constraintTop_toTopOf="@+id/guideline18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/pc_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline18" />

        <TextView
            android:id="@+id/cpu_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline12" />

        <TextView
            android:id="@+id/ram_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline14" />

        <TextView
            android:id="@+id/ssd_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline15" />

        <TextView
            android:id="@+id/mb_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline16" />

        <TextView
            android:id="@+id/price_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline20" />

        <TextView
            android:id="@+id/gcard_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/guideline10"
            card_view:layout_constraintTop_toTopOf="@+id/guideline19" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>